# rfsbase

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  SPECS.md  docker-compose.dev.yml  docker-compose.ec2.yml  docker-compose.multi.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.serena/: project.yml
.serena/memories/: architecture.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion.md
backend/: Cargo.toml  seed.surql
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: v001_initial.surql
backend/src/models/: mod.rs
backend/src/routes/: auth.rs  comments.rs  ideas.rs  mod.rs  notifications.rs  users.rs
backend/src/services/: mod.rs
config/: app.config.json  categories.config.json  features.config.json  routes.config.json  theme.config.json
db/: seed.surql
db/migrations/: 001_initial.surql  002_fix_embedding_index.surql  002_profile_indexes.surql  003_user_privacy.surql
deploy/: README.md  SECURITY.md  backup-to-s3.sh  configure-domain.sh  ec2-setup.sh  restore-from-s3.sh  setup-dev-env.sh  user-data.sh
deploy/multi-project/: Caddyfile  README.md  docker-compose.shared.yml
docker/: Caddyfile  Caddyfile.ec2  Caddyfile.prod  backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  surrealdb-entrypoint.sh  surrealdb.Dockerfile
frontend/: .npmrc  .posthog-events.json  biome.json  instrumentation-client.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: accessibility.spec.ts  auth.spec.ts  home.spec.ts  ideas.spec.ts  marketing.spec.ts  notifications.spec.ts  (+2 more)
terraform/: .gitignore  README.md  iam-terraform-admin-lambda.json  main.tf  outputs.tf  terraform.tfvars  user-data.tftpl  variables.tf
(+139 files in other folders)
