[package]
name = "rfsbase-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["RFSbase Team"]
description = "Backend API for RFSbase"
license = "MIT"
repository = "https://github.com/rfsbase/rfsbase"

[[bin]]
name = "rfsbase-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - using latest 2.x version (http protocol for Docker compatibility)
surrealdb = { version = "2.5", features = ["kv-mem", "protocol-http"] }

# Authentication & Security
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# HTTP client (OAuth, external APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# AI/ML
async-openai = "0.24"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
